--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.0.1",
+    "jsonwebtoken": "^8.4.0",
     "request": "^2.88.0",
     "rxjs": "~6.3.3",
     "sinon": "^7.2.2",
