--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "start_windows": "set NODE_ENV=production&&babel-watch server.js",
     "build": "ng build",
-    "test": "ng test",
+    "test": "mocha",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "dev": "babel-watch server.js",
@@ -63,6 +63,7 @@
     "mongoose": "^5.4.0",
     "morgan": "^1.9.1",
     "protractor": "~5.4.0",
+    "should": "^13.2.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
