--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "start": "node server.js",
     "start_windows": "set NODE_ENV=production&&babel-watch server.js",
     "build": "ng build",
-    "test": "mocha",
+    "test": "nyc mocha",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "dev": "babel-watch server.js",
-    "test-mocha": "ng mocha --timeout 10000"
+    "test-mocha": "nyc mocha"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +26,7 @@
     "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "jsonwebtoken": "^8.4.0",
+    "nyc": "^13.1.0",
     "request": "^2.88.0",
     "rxjs": "~6.3.3",
     "sinon": "^7.2.2",
